# aegis-sdk-python

./: .gitignore  .markdownlint-cli2.jsonc  CONTRIBUTING.md  LICENSE  README.md  README_OLD.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
aegis/: __init__.py  bootstrap.py  client.py  manifest.py  types.py  uploads.py
aegis/seal/: __init__.py  client.py  crypto.py  envelope.py  server.py
scripts/: ci.sh
tests/: test_client.py  test_seal.py  test_types.py  test_uploads.py
