[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-sdk"
version = "0.15.0a0"
description = "Python SDK for building AEGIS agents"
readme = "README.md"
license = { text = "AGPL-3.0" }
authors = [
    { name = "AEGIS Core Team" }
]
keywords = ["aegis", "ai", "agents", "autonomous", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.0",
    "pyyaml>=6.0.3",
    "cryptography>=46.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "black>=26.3.1",
    "mypy>=1.20.2",
    "ruff>=0.15.12",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://100monkeys.ai"
Documentation = "https://docs.100monkeys.ai"
Repository = "https://github.com/100monkeys-ai/aegis-sdk-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
